--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,14 @@
             <version>2.5.0</version>
         </dependency>
 
+        <!--读取xml-->
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
