--- a/src/main/resources/application-win.yml
+++ b/src/main/resources/application-win.yml
@@ -1,7 +1,8 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://127.0.0.1/MapArchive
+#      uri: mongodb://127.0.0.1/MapArchive
+      uri: mongodb://172.21.213.33/MapArchiveDB
 
 
 #resourcePath: /home/MapArchive/mapArchiveFiles
