--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,7 +5,7 @@ spring:
   data:
     mongodb:
 #      uri: mongodb://127.0.0.1/MapArchive
-#      uri: mongodb://localhost/MapArchiveDB
+#      uri: mongodb://localhost/MapArchive
       uri: mongodb://172.21.213.33/MapArchiveDB
 #      uri: mongodb://172.21.212.168/MapArchive
 
@@ -13,8 +13,8 @@ spring:
 #    driver-class-name: org.sqlite.JDBC
 #    url: jdbc:sqlite:E:/mapArchiveFiles/demo.mbtiles
 
-#resourcePath: E:/mapArchiveFiles
-resourcePath: D:/mapArchiveFiles
+resourcePath: E:/mapArchiveFiles
+#resourcePath: D:/mapArchiveFiles
 #dataServerPath: Z:/
 #resourcePath: Z:/mapArchiveFiles
 
