--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,8 +5,8 @@ spring:
   data:
     mongodb:
 #      uri: mongodb://127.0.0.1/MapArchive
-#      uri: mongodb://localhost/MapArchive
-      uri: mongodb://172.21.213.33/MapArchiveDB
+      uri: mongodb://localhost/MapArchive
+#      uri: mongodb://172.21.213.33/MapArchiveDB
 #      uri: mongodb://172.21.212.168/MapArchive
 
 #  datasource:
