--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,8 +5,8 @@ spring:
   data:
     mongodb:
 #      uri: mongodb://127.0.0.1/MapArchive
-      uri: mongodb://localhost/MapArchive
-#      uri: mongodb://172.21.213.33/MapArchiveDB
+#      uri: mongodb://localhost/MapArchive
+      uri: mongodb://172.21.213.33/MapArchiveDB
 #      uri: mongodb://172.21.212.168/MapArchive
 
 #  datasource:
@@ -14,7 +14,7 @@ spring:
 #    url: jdbc:sqlite:E:/mapArchiveFiles/demo.mbtiles
 
 #resourcePath: E:/mapArchiveFiles
-resourcePath: E:/mapArchiveFiles
+resourcePath: D:/mapArchiveFiles
 #dataServerPath: Z:/
 #resourcePath: Z:/mapArchiveFiles
 
@@ -23,6 +23,3 @@ resourcePath: E:/mapArchiveFiles
 
 #logback:
 #  LOG_HOME: E:/mapArchiveFiles/logs
-
-
-ipAndPort: "http://127.0.0.1:8999"
